--- a/.github/workflows/terraform-plan.yml
+++ b/.github/workflows/terraform-plan.yml
@@ -124,41 +124,34 @@ jobs:
           # Optional
           title: Terraform Plan Summary
 
-      - name: Save Terraform Plan to file
-        run: echo "${{ steps.plan.outputs.stdout }}" > plan.txt
-
       - uses: actions/github-script@v6
         if: github.event_name == 'pull_request'
+        env:
+          PLAN: "terraform\n${{ steps.plan.outputs.stdout }}"
         with:
           script: |
-            const fs = require('fs');
-
             const planOutput = fs.readFileSync('plan.txt', 'utf8');
-            const output = `#### Terraform Format and Style 🖌 \`${{ steps.fmt.outcome }}\`
-            #### Terraform Initialization ⚙️ \`${{ steps.init.outcome }}\`
-            #### Terraform Validation 🤖 \`${{ steps.validate.outcome }}\`
-            #### Terraform Plan 📖 \`${{ steps.plan.outcome }}\`
-
+            const output = `#### Terraform Format and Style 🖌\`${{ steps.fmt.outcome }}\`
+            #### Terraform Initialization ⚙️\`${{ steps.init.outcome }}\`
+            #### Terraform Validation 🤖\`${{ steps.validate.outcome }}\`
+            #### Terraform Plan 📖\`${{ steps.plan.outcome }}\`
+  
             <details><summary>Show Plan</summary>
-
-            \`\`\`
+  
+            \`\`\`\n
             ${planOutput}
             \`\`\`
-
+  
             </details>
             *Pushed by: @${{ github.actor }}, Action: \`${{ github.event_name }}\`*`;
-
-            // Post comment on PR
-            await
-
+  
             github.rest.issues.createComment({
               issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
               body: output
-            });
-
- 
+            })
+  
       - name: Terraform Plan Status
         if: steps.plan.outcome == 'failure'
         run: exit 1
