--- a/.github/workflows/terraform-cicd.yml
+++ b/.github/workflows/terraform-cicd.yml
@@ -58,16 +58,12 @@ jobs:
           echo "$CHANGED" | grep 'uat' >/dev/null && echo "changed-uat=true" >> $GITHUB_OUTPUT || echo "changed-uat=false" >> $GITHUB_OUTPUT
           echo "$CHANGED" | grep 'prod' >/dev/null && echo "changed-prod=true" >> $GITHUB_OUTPUT || echo "changed-prod=false" >> $GITHUB_OUTPUT
 
-          ONLY_SHARED=$(echo "$CHANGED" | grep -Ev 'dev|uat|prod' || true)
-          echo "$CHANGED" | grep -Ev 'dev|uat|prod' || true
-          NO_ENV=$(echo "$CHANGED" | grep -Ev 'dev|uat|prod' || true)
-
-          if [ -n "$ONLY_SHARED" ] && [ "$(echo "$CHANGED" | grep -E 'dev|uat|prod' | wc -l)" -eq 0 ]; then
+          if echo "$CHANGED" | grep -Ev 'dev|uat|prod' | grep -q '.'; then
             echo "trigger-all=true" >> $GITHUB_OUTPUT
           else
             echo "trigger-all=false" >> $GITHUB_OUTPUT
           fi
-
+          
   # PR to DEV branch
   pr-dev:
     needs: detect-changes
