--- a/.github/workflows/terraform-cicd.yml
+++ b/.github/workflows/terraform-cicd.yml
@@ -139,7 +139,7 @@ jobs:
   pr-main-uat:
     needs: detect-changes
     if: |
-      github.event_name == 'pull_request' && github.base_ref == 'main' && github.head_ref == 'dev'
+      github.event_name == 'pull_request' && github.base_ref == 'main'
       && (needs.detect-changes.outputs.changed-uat == 'true' || needs.detect-changes.outputs.trigger-all == 'true')    
     uses: ./.github/workflows/terraform-plan.yml
     with:
@@ -153,7 +153,7 @@ jobs:
   pr-main-prod:
     needs: detect-changes
     if: |
-      github.event_name == 'pull_request' && github.base_ref == 'main' && github.head_ref == 'dev'
+      github.event_name == 'pull_request' && github.base_ref == 'main'
       && (needs.detect-changes.outputs.changed-prod == 'true' || needs.detect-changes.outputs.trigger-all == 'true')  
     uses: ./.github/workflows/terraform-plan.yml
     with:
@@ -174,6 +174,7 @@ jobs:
     with:
       environment: uat
       tfvars: terraform.uat.tfvars
+      apply: true
       backend_config: backend.uat.hcl
       IAM_OIDC_ROLE: arn:aws:iam::140023376669:role/cmrs-DEV-TH-custom-GithubOIDCRole
       REGION: ap-southeast-7
@@ -198,6 +199,7 @@ jobs:
     with:
       environment: prod
       tfvars: terraform.prod.tfvars
+      apply: true
       backend_config: backend.prod.hcl
       IAM_OIDC_ROLE: arn:aws:iam::140023376669:role/cmrs-DEV-TH-custom-GithubOIDCRole
       REGION: ap-southeast-7
