--- a/.github/workflows/terraform-destroy.yml
+++ b/.github/workflows/terraform-destroy.yml
@@ -58,11 +58,12 @@ jobs:
             "terraform-${{ github.repository }}-${{ inputs.environment }}"
 
       - name: Terraform Init
+        id: init
         run: |
-          terraform init -backend-config="${{ inputs.backend_config }}" -backend-config="key=state/${{ github.repository }}-terraform.tfstate" \
+          terraform init -backend-config="${{ inputs.backend_config }}" -backend-config="key=state/${{ github.repository }}-${{ inputs.environment }}-terraform.tfstate" \
            || (
             echo "Retrying with -upgrade due to possible cache issue..." &&
-            terraform init -upgrade -backend-config="${{ inputs.backend_config }}" -backend-config="key=state/${{ github.repository }}-terraform.tfstate"
+            terraform init -upgrade -backend-config="${{ inputs.backend_config }}" -backend-config="key=state/${{ github.repository }}-${{ inputs.environment }}-terraform.tfstate"
           )
 
       - id: install-aws-cli
@@ -133,11 +134,12 @@ jobs:
             "terraform-${{ github.repository }}-${{ inputs.environment }}"
 
       - name: Terraform Init
+        id: init
         run: |
-          terraform init -backend-config="${{ inputs.backend_config }}" -backend-config="key=state/${{ github.repository }}-terraform.tfstate" \
+          terraform init -backend-config="${{ inputs.backend_config }}" -backend-config="key=state/${{ github.repository }}-${{ inputs.environment }}-terraform.tfstate" \
            || (
             echo "Retrying with -upgrade due to possible cache issue..." &&
-            terraform init -upgrade -backend-config="${{ inputs.backend_config }}" -backend-config="key=state/${{ github.repository }}-terraform.tfstate"
+            terraform init -upgrade -backend-config="${{ inputs.backend_config }}" -backend-config="key=state/${{ github.repository }}-${{ inputs.environment }}-terraform.tfstate"
           )
 
       - uses: actions/download-artifact@v4
