--- a/.github/workflows/terraform-cicd.yml
+++ b/.github/workflows/terraform-cicd.yml
@@ -38,6 +38,7 @@ jobs:
       changed-uat: ${{ steps.changes.outputs.changed-uat }}
       changed-prod: ${{ steps.changes.outputs.changed-prod }}
       trigger-all: ${{ steps.changes.outputs.trigger-all }}
+      trigger-prod: ${{ steps.changes.outputs.trigger-prod }}
 
     steps:
       - name: Checkout
@@ -72,6 +73,22 @@ jobs:
             echo "trigger-all=true" >> "$GITHUB_OUTPUT"
           else
             echo "trigger-all=false" >> "$GITHUB_OUTPUT"
+          fi
+
+          # Check if commit is a merge commit with title starting with "PROD-CR"
+          COMMIT_MSG=$(git log -1 --pretty=%B)
+          echo "Commit message: $COMMIT_MSG"
+          if echo "$COMMIT_MSG" | grep -q "Merge pull request"; then
+            if echo "$COMMIT_MSG" | grep -q "PROD-CR"; then
+              echo "✅ PR title starts with PROD-CR"
+              echo "trigger-prod=true" >> "$GITHUB_OUTPUT"
+            else
+              echo "❌ PR title does not start with PROD-CR"
+              echo "trigger-prod=false" >> "$GITHUB_OUTPUT"
+            fi
+          else
+            echo "❌ Not a PR merge commit"
+            echo "trigger-prod=false" >> "$GITHUB_OUTPUT"
           fi
 
       - name: Print outputs
@@ -204,8 +221,23 @@ jobs:
       IAM_OIDC_ROLE: arn:aws:iam::140023376669:role/cmrs-DEV-TH-custom-GithubOIDCRole
       REGION: ap-southeast-7
 
-  main-prod-apply:
-    needs: main-prod-plan
+  # CR for PROD
+  cr-prod-plan:
+    needs: detect-changes
+    if: |
+      github.event_name == 'push' && github.ref == 'refs/heads/main'
+      && (needs.detect-changes.outputs.trigger-prod == 'true') 
+    uses: ./.github/workflows/terraform-plan.yml
+    with:
+      environment: prod
+      tfvars: terraform.prod.tfvars
+      apply: true
+      backend_config: backend.prod.hcl
+      IAM_OIDC_ROLE: arn:aws:iam::140023376669:role/cmrs-DEV-TH-custom-GithubOIDCRole
+      REGION: ap-southeast-7
+
+  prod-apply:
+    needs: [main-prod-plan, cr-prod-plan]
     uses: ./.github/workflows/terraform-apply.yml
     with:
       environment: prod
