--- a/.github/workflows/terraform-cicd.yml
+++ b/.github/workflows/terraform-cicd.yml
@@ -34,11 +34,10 @@ jobs:
   detect-changes:
     runs-on: ubuntu-latest
     outputs:
-      changed-dev: ${{ steps.changes.outputs.changed-dev }}
-      changed-uat: ${{ steps.changes.outputs.changed-uat }}
-      changed-prod: ${{ steps.changes.outputs.changed-prod }}
-      trigger-all: ${{ steps.changes.outputs.trigger-all }}
+      trigger-dev: ${{ steps.changes.outputs.trigger-dev }}
+      trigger-uat: ${{ steps.changes.outputs.trigger-uat }}
       trigger-prod: ${{ steps.changes.outputs.trigger-prod }}
+      trigger-all: ${{ steps.changes.outputs.trigger-all }}
 
     steps:
       - name: Checkout
@@ -64,15 +63,29 @@ jobs:
           echo "$CHANGED"
 
           # Set outputs based on paths
-          echo "$CHANGED" | grep 'dev' >/dev/null && echo "changed-dev=true" >> "$GITHUB_OUTPUT" || echo "changed-dev=false" >> "$GITHUB_OUTPUT"
-          echo "$CHANGED" | grep 'uat' >/dev/null && echo "changed-uat=true" >> "$GITHUB_OUTPUT" || echo "changed-uat=false" >> "$GITHUB_OUTPUT"
-          echo "$CHANGED" | grep 'prod' >/dev/null && echo "changed-prod=true" >> "$GITHUB_OUTPUT" || echo "changed-prod=false" >> "$GITHUB_OUTPUT"
+          echo "$CHANGED" | grep 'dev' >/dev/null && echo "trigger-dev=true" >> "$GITHUB_OUTPUT" || echo "trigger-dev=false" >> "$GITHUB_OUTPUT"
+          echo "$CHANGED" | grep 'uat' >/dev/null && echo "trigger-uat=true" >> "$GITHUB_OUTPUT" || echo "trigger-uat=false" >> "$GITHUB_OUTPUT"
+          echo "$CHANGED" | grep 'prod' >/dev/null && echo "trigger-prod=true" >> "$GITHUB_OUTPUT" || echo "trigger-prod=false" >> "$GITHUB_OUTPUT"
 
           # Check if shared files changed
           if echo "$CHANGED" | grep -Ev 'dev|uat|prod' | grep -q '.'; then
             echo "trigger-all=true" >> "$GITHUB_OUTPUT"
           else
             echo "trigger-all=false" >> "$GITHUB_OUTPUT"
+          fi
+
+          # Check if pull request source branch starts with PROD-CR
+          echo "Source branch: ${{ github.head_ref }}"
+          if [[ "${{ github.head_ref }}" == PROD-CR* ]]; then
+            echo "✅ Source branch starts with PROD-CR"
+            echo "trigger-prod=true" >> "$GITHUB_OUTPUT"
+            echo "trigger-all=false" >> "$GITHUB_OUTPUT"
+            echo "trigger-dev=false" >> "$GITHUB_OUTPUT"
+            echo "trigger-uat=false" >> "$GITHUB_OUTPUT"
+
+          else
+            echo "❌ Source branch does not start with PROD-CR"
+            exit 1
           fi
 
           # Check if commit is a merge commit with title starting with "PROD-CR"
@@ -93,8 +106,8 @@ jobs:
 
       - name: Print outputs
         run: |
-          echo "Changed DEV: ${{ steps.changes.outputs.changed-dev }}"
-          echo "Changed UAT: ${{ steps.changes.outputs.changed-uat }}"
+          echo "Changed DEV: ${{ steps.changes.outputs.trigger-dev }}"
+          echo "Changed UAT: ${{ steps.changes.outputs.trigger-uat }}"
           echo "Changed PROD: ${{ steps.changes.outputs.changed-prod }}"
           echo "Trigger All: ${{ steps.changes.outputs.trigger-all }}"
 
@@ -107,14 +120,14 @@ jobs:
         run: |
           echo ${{github.event_name}}
           echo ${{github.base_ref}}
-          echo ${{needs.detect-changes.outputs.changed-dev}}
+          echo ${{needs.detect-changes.outputs.trigger-dev}}
           echo ${{needs.detect-changes.outputs.trigger-all}}
-          echo "Evaluated: ${{ github.event_name == 'pull_request' && github.base_ref == 'dev' && (needs.detect-changes.outputs.changed-dev == 'true' || needs.detect-changes.outputs.trigger-all == 'true') }}"
+          echo "Evaluated: ${{ github.event_name == 'pull_request' && github.base_ref == 'dev' && (needs.detect-changes.outputs.trigger-dev == 'true' || needs.detect-changes.outputs.trigger-all == 'true') }}"
 
   # PR to DEV branch
   pr-dev:
     needs: detect-changes
-    if: github.event_name == 'pull_request' && github.base_ref == 'dev' && (needs.detect-changes.outputs.changed-dev == 'true' || needs.detect-changes.outputs.trigger-all == 'true')
+    if: github.event_name == 'pull_request' && github.base_ref == 'dev' && (needs.detect-changes.outputs.trigger-dev == 'true' || needs.detect-changes.outputs.trigger-all == 'true')
 
     uses: ./.github/workflows/terraform-plan.yml
     with:
@@ -130,7 +143,7 @@ jobs:
     needs: detect-changes
     if: |
       github.event_name == 'push' && github.ref == 'refs/heads/dev' 
-      && (needs.detect-changes.outputs.changed-dev == 'true' || needs.detect-changes.outputs.trigger-all == 'true')
+      && (needs.detect-changes.outputs.trigger-dev == 'true' || needs.detect-changes.outputs.trigger-all == 'true')
     uses: ./.github/workflows/terraform-plan.yml
     with:
       environment: dev
@@ -157,7 +170,7 @@ jobs:
     needs: detect-changes
     if: |
       github.event_name == 'pull_request' && github.base_ref == 'main'
-      && (needs.detect-changes.outputs.changed-uat == 'true' || needs.detect-changes.outputs.trigger-all == 'true')    
+      && (needs.detect-changes.outputs.trigger-uat == 'true' || needs.detect-changes.outputs.trigger-all == 'true')    
     uses: ./.github/workflows/terraform-plan.yml
     with:
       environment: uat
@@ -186,7 +199,7 @@ jobs:
     needs: detect-changes
     if: |
       github.event_name == 'push' && github.ref == 'refs/heads/main'
-      && (needs.detect-changes.outputs.changed-uat == 'true' || needs.detect-changes.outputs.trigger-all == 'true')    
+      && (needs.detect-changes.outputs.trigger-uat == 'true' || needs.detect-changes.outputs.trigger-all == 'true')    
     uses: ./.github/workflows/terraform-plan.yml
     with:
       environment: uat
