--- a/.github/workflows/terraform-plan.yml
+++ b/.github/workflows/terraform-plan.yml
@@ -34,7 +34,7 @@ on:
 
 jobs:
   terraform-plan:
-    runs-on: ubuntu-latest
+    runs-on: arc-runner-set
     permissions:
       id-token: write
       contents: read
